# rust_practice

./: .gitignore  Cargo.toml  README.md
src/: main.rs
