[package]
name = "idioms"
version = "0.1.0"
authors = ["hans <themog@tari.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
num-bigint = { version = "0.3", features = ["rand"] }
num-traits = "0.2.12"
num = "0.3.0"